# file-scanner

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml
include/scanner/: domain.h  interfaces.h  visibility.h
scripts/: benchmark.py
src/: CMakeLists.txt
src/scanner_cli/: CMakeLists.txt  main.cpp
src/scanner_lib/: CMakeLists.txt  csv_hash_database.cpp  csv_hash_database.h  domain.cpp  file_logger.cpp  file_logger.h  md5_file_hasher.cpp  md5_file_hasher.h  scanner.cpp  scanner.h  scanner_builder.cpp  scanner_builder.h  thread_pool.cpp  thread_pool.h
tests/: CMakeLists.txt  csv_hash_database_test.cpp  file_logger_test.cpp  integration_test.cpp  md5_file_hasher_test.cpp  process_helper.h  scanner_builder_test.cpp  scanner_test.cpp  thread_pool_test.cpp
